# gh_workflow_with_external_server

./: .gitignore  CLAUDE.md  LICENSE  README.md  RUN.md  pyproject.toml  test_integration.py
.github/workflows/: claude.yml
app/: __init__.py  server.py  watch.py
